CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT (OpenGLTest)

SET (CMAKE_CXX_STANDARD 11)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (GLEW_DIR "/usr/local/Cellar/glew/2.2.0_1/include/GL" CACHE PATH "Added GLEW path dir")
SET (GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET (GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

ADD_EXECUTABLE (test src/test.cxx)

FIND_PACKAGE (GLEW REQUIRED)
FIND_PACKAGE (glfw3 3.3 REQUIRED)

TARGET_INCLUDE_DIRECTORIES (test PUBLIC ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES (test PUBLIC include)

TARGET_LINK_LIBRARIES (test GLEW::GLEW)
TARGET_LINK_LIBRARIES (test glfw)


# FILE (COPY ${CMAKE_CURRENT_SOURCE_DIR}/imgs/leaf.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

